test/spec_vectors/conversions/fail/module_17.wat
(module (func (result f32) (f32.convert_i64_u (i32.const 0))))